@startuml
'https://plantuml.com/class-diagram

class PlayerData {
    int thoiGian, countDown
    float grade
}
Interface PlayerDataListener{
 void listen(PlayerData player)
}

class DashBoard {
    void listen(PlayerData player)
}

PlayerDataListener <-- DashBoard
PlayerData <--o DashBoard : player
PlayerData --> PlayerDataListener : listener

@enduml